[gd_scene load_steps=7 format=3 uid="uid://m66aub7shojm"]

[ext_resource type="Script" path="res://Nodes/hkbB/Scripts/hkbBoneIndexArrayScene.gd" id="1_8n2gx"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_iavk5"]
[ext_resource type="Texture2D" uid="uid://dtrsj56jbquo8" path="res://Resources/Icons/PinButton.png" id="3_vnfdh"]
[ext_resource type="Texture2D" uid="uid://csb3wjekhlmy1" path="res://Resources/Icons/UnpinButton.png" id="4_sx4i0"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_g2awb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y45yo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.168627, 0.211765, 0.266667, 0.898039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 1
anti_aliasing_size = 2.0

[node name="hkbBoneIndexArray" type="GraphNode"]
offset_right = 300.0
offset_bottom = 100.0
title = "hkbBoneIndexArray"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_8n2gx")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(509, 505)
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_y45yo")

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 5.0
offset_top = 5.0
offset_right = 504.0
offset_bottom = 500.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_iavk5")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbBoneIndexArray"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PinButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_vnfdh")
texture_pressed = ExtResource("4_sx4i0")

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_g2awb")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="AddBones" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Bones"

[node name="RemoveBones" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Bones"

[node name="ScrollContainer" type="ScrollContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
custom_minimum_size = Vector2(0, 425)
layout_mode = 2
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer/AddBones" to="." method="_on_add_bones_pressed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/ButtonContainer/RemoveBones" to="." method="_on_remove_bones_pressed"]
